# arcade-game-framework

./: .gitattributes  .pre-commit-config.yml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/features/: agf-powerups.md  powerups-delta.md
src/agf/: events.py  high_scores.py  music.py  paths.py  player_state.py  spawn_safety.py  state.py  window.py
src/agf/background/: __init__.py  background_config.py  star_field.py  static_background.py
src/agf/config/: __init__.py  base_config.py
src/agf/levels/: base_level.py
src/agf/powerups/: config.py  effect_base.py  effect_categories.py  manager.py  powerup_sprite.py  spawner.py
src/agf/sprites/: __init__.py  explosion.py  particles.py
src/agf/ui/: hud_base.py  score_popup.py  text_utils.py
src/agf/views/: __init__.py  game_over.py  level_complete.py  main_menu.py  score_entry.py  splash.py
tests/: test_base_config.py  test_base_state.py  test_explosion.py  test_high_scores.py  test_hud_base.py  test_particles.py  test_player_state.py  test_powerup_effect_categories.py  test_powerup_manager.py  test_powerup_spawner.py  test_powerup_sprite.py  test_score_popup.py  test_spawn_safety.py  test_star_field.py
